fix: increase cookies z-index

--- a/app/assets/sass/_cookies.scss
+++ b/app/assets/sass/_cookies.scss
@@ -1,5 +1,5 @@
 .cookie-control {
-  @apply relative z-20
+  @apply relative z-50
 }
 
 .cookie-control-ModalCookieName {
